--- a/Módulo 1/Fashion_MNIST.ipynb
+++ b/Módulo 1/Fashion_MNIST.ipynb
@@ -17,7 +17,7 @@
         "id": "09bc1096"
       },
       "source": [
-        "# Bootcamp Analista de Machine Learning - XEP IGTI"
+        "# Bootcamp Analista de Machine Learning - XPE IGTI"
       ]
     },
     {
